Added Code For WorkSection

--- a/portfolio.html
+++ b/portfolio.html
@@ -9,7 +9,7 @@
 <body>
     <div class="header">
     <p class="logo">My Logo</p>
-    <img class="image" src="Icon - Menu.svg" alt="Icon">
+    <img src="Icon - Menu.svg" alt="Icon">
 </div>
 <div class="headline" >
     
@@ -25,8 +25,22 @@ you!</h1>
 </div>
     
 <div class="work-Section">
+    <div class="card">
+<div class="image">    </div>
+<h1 class="tonic">Tonic</h1>
+<div class="layout">
+<h3>CANOPY</h3>   
+<img class="dot" src="Counter.png" alt="Counter Picture"> 
+<h3 class="dev">Back End Dev</h3>
+<img class="dot" src="Counter.png" alt="Counter Picture"> 
+<h3 class="dev">2015</h3>
 
 </div>
+    </div>
+</div>
+
+
+
 </body>
 </html>
 
