Work-Section Added

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,16 +26,22 @@ you!</h1>
     
 <div class="work-Section">
     <div class="card">
-<div class="image">    </div>
-<h1 class="tonic">Tonic</h1>
-<div class="layout">
-<h3>CANOPY</h3>   
-<img class="dot" src="Counter.png" alt="Counter Picture"> 
-<h3 class="dev">Back End Dev</h3>
-<img class="dot" src="Counter.png" alt="Counter Picture"> 
-<h3 class="dev">2015</h3>
-
+        <div class="image">   </div>
+        <h1 class="tonic">Tonic</h1>
+        <div class="layout">
+            <h3>CANOPY</h3>   
+            <img class="dot" src="Counter.png" alt="Counter Picture"> 
+            <h3 class="dev">Back End Dev</h3>
+            <img class="dot" src="Counter.png" alt="Counter Picture"> 
+            <h3 class="dev">2015</h3>
+        </div>
+        <p class="para1">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
+<div class="buttons">
+    <h4>HTML</h4>
+    <h4>CSS</h4>
+    <h4>JavaScript</h4>
 </div>
+<div class="See" >See Projects</div>
     </div>
 </div>
 
