--- a/portfolio.html
+++ b/portfolio.html
@@ -126,5 +126,13 @@
 </div>
 </div>
 
+<div class="contact-form">
+    <div class="background">
+    <h1 class= "contact">Contact Me</h1>
+    <p class="contact-about">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it!</p>
+    <h4 class="get-in-touch">Get in Touch</h4>
+    <div class="footer"></div>
+</div>
+</div>
 </body>
 </html>
