--- a/portfolio.html
+++ b/portfolio.html
@@ -130,7 +130,7 @@
     <div class="background">
     <h1 class= "contact">Contact Me</h1>
     <p class="contact-about">If you have an application you are interested in developing, a feature that you need built or a project that needs coding. I'd love to help with it!</p>
-    <form class="form" action="" method="post">
+    <form class="form" action="https://formspree.io/f/mqkvgqod" method="post">
         <input name="email" class="form-email" placeholder="Email" maxlength="" required>
         <input name="full-name" class="form-email" placeholder="Name" maxlength="30" required>
         <textarea name="message" class="form-message" placeholder="Write youe message here..." maxlength="500" required></textarea>
