--- a/portfolio.html
+++ b/portfolio.html
@@ -3,30 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio_Project</title>
+    <title>PortFolio_Project </title>
 </head>
 <link rel="stylesheet" href="mystyle.css">
 <body>
-    <div class="header">
-    <p class="logo">My Logo</p>
-    <img class="image" src="Icon - Menu.svg" alt="Icon">
+    <header class="container">
+<div class="logo"><b>My Logo</b></div>
+<div class="menu">
+    <img src="Icon - Menu.svg" alt="Menu-Bar">
 </div>
-<div class="headline" >
-    
-        <h1 class="intro" >I’m Hassan Jamal.
-Glad to see
-you!</h1>
-    <p class="para">
-        I’m a software developer! I can help youbuild a product , feature or website Lookthrough some of my work andexperience! If you like what you see andhave a project you need coded, don’t hesitate to contact me.
-    </p>
-    <h4 class="Connect">
-        Let's Connect</h4>
-    <img class="about" src="social media icons.svg" alt="Social media icons">
-</div>
-    
-<div class="work-Section">
-
+ </header>
+ <div class="headline">
+    <b class="primary-text">
+        <p >I'm Hassan Jamal.<br>Glad to see you!</p>
+    </b>
+    <p class="description">I'm a software developer! I can help you build a product , feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
+    <h4 class="lets-connect">LET'S CONNECT</h4>
+    <img src="./social media icons.png" alt="Social Media Icons" class="social-media-icons">
 </div>
 </body>
 </html>
-
