--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <div class="navbar">
         <h1 class="logo">My Logo</h1>
+        <div class="pc-hide ham-menu" id="hamMenu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>   
         <img src="./Menu.svg" alt="menu icon" class="menu">
         <div class="navbar-links">
             <a href="#work-section" class="navbar-link">Portfolio</a>
@@ -38,12 +43,12 @@
                     <h3 class="tech-item">2015</h3>
                 </div>
                 <p>A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
-                <ul>
-                    <li class="lang-list">HTML</li>
-                    <li class="lang-list margin">CSS</li>
-                    <li class="lang-list margin">Javascript</li>
-                    <li  class="mob-hide lang-list margin">Ruby on rails</li>
-                </ul>
+             <ul>
+                        <li class="lang-list"><a href="https://html.spec.whatwg.org/multipage/">HTML</a></li>
+                        <li class="lang-list margin"><a href="https://devdocs.io/css/">CSS</a></li>
+                        <li class="lang-list margin"><a href="https://devdocs.io/javascript/">Javascript</a></li>
+                        <li  class="mob-hide lang-list margin"><a href="https://guides.rubyonrails.org/">Ruby on rails</a></li>
+                    </ul>
                 <button class="project">See Project</button>
             </div>
         </div>
@@ -66,12 +71,12 @@
                 </div>
                 <p class="pc-hide">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 <p class="mob-hide">Experimental content creation feature that allows users to add to an existing story over the course of a day without spamming their friends.</p>
-                <ul>
-                    <li class="lang-list">HTML</li>
-                    <li class="lang-list margin">CSS</li>
-                    <li class="lang-list margin">Javascript</li>
-                    <li  class="mob-hide lang-list margin">Ruby on rails</li>
-                </ul>
+                 <ul>
+                        <li class="lang-list"><a href="https://html.spec.whatwg.org/multipage/">HTML</a></li>
+                        <li class="lang-list margin"><a href="https://devdocs.io/css/">CSS</a></li>
+                        <li class="lang-list margin"><a href="https://devdocs.io/javascript/">Javascript</a></li>
+                        <li  class="mob-hide lang-list margin"><a href="https://guides.rubyonrails.org/">Ruby on rails</a></li>
+                    </ul>
                 <button class="project">See Project</button>
             </div>
         </div>
@@ -94,12 +99,12 @@
                 </div>
                 <p class="pc-hide">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 <p class="mob-hide">Exploring the future of media in Facebook's first Virtual Reality app; a place to discover and enjoy 360 photos and videos on Gear VR.</p>
-                <ul>
-                    <li class="lang-list">HTML</li>
-                    <li class="lang-list margin">CSS</li>
-                    <li class="lang-list margin">Javascript</li>
-                    <li  class="mob-hide lang-list margin">Ruby on rails</li>
-                </ul>
+                 <ul>
+                        <li class="lang-list"><a href="https://html.spec.whatwg.org/multipage/">HTML</a></li>
+                        <li class="lang-list margin"><a href="https://devdocs.io/css/">CSS</a></li>
+                        <li class="lang-list margin"><a href="https://devdocs.io/javascript/">Javascript</a></li>
+                        <li  class="mob-hide lang-list margin"><a href="https://guides.rubyonrails.org/">Ruby on rails</a></li>
+                    </ul>
                 <button class="project">See Project</button>
             </div>
         </div>
@@ -123,12 +128,12 @@
                 </div>
                 <p class="pc-hide">A daily selection of privately personalized reads; no accounts or sign-ups required.</p>
                 <p class="mob-hide">A smart assistant to make driving more safe, efficient, and fun by unlocking your most expensive computer: your car.</p>
-                <ul>
-                    <li class="lang-list">HTML</li>
-                    <li class="lang-list margin">CSS</li>
-                    <li class="lang-list margin">Javascript</li>
-                    <li  class="mob-hide lang-list margin">Ruby on rails</li>
-                </ul>
+                  <ul>
+                        <li class="lang-list"><a href="https://html.spec.whatwg.org/multipage/">HTML</a></li>
+                        <li class="lang-list margin"><a href="https://devdocs.io/css/">CSS</a></li>
+                        <li class="lang-list margin"><a href="https://devdocs.io/javascript/">Javascript</a></li>
+                        <li  class="mob-hide lang-list margin"><a href="https://guides.rubyonrails.org/">Ruby on rails</a></li>
+                    </ul>
                 <button class="project">See Project</button>
             </div>
         </div>
